web-infras/parser/tests/fixtures/babel/es2015/uncategorised/280/output.txt
[SyntaxError]: duplicate params (1,31)
1|"use strict"; function x(a, { a }){}
 |                             ^
